--- a/tools/telemetry_guard/Cargo.toml
+++ b/tools/telemetry_guard/Cargo.toml
@@ -9,3 +9,4 @@ description = "Validates telemetry catalogs for _ms/_seconds contract"
 anyhow = "1.0.95"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+ceptra = { path = "../.." }
