--- a/tools/bootstrapper/Cargo.toml
+++ b/tools/bootstrapper/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ceptra = { path = "../.." }
+ceptra = { path = "../..", default-features = false }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
