--- a/tools/bundle_deployer/Cargo.toml
+++ b/tools/bundle_deployer/Cargo.toml
@@ -8,4 +8,4 @@ anyhow = "1.0.95"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serde_yaml = "0.9.34"
-ceptra = { path = "../.." }
+ceptra = { path = "../..", default-features = false }
