--- a/tools/dr_cutover/Cargo.toml
+++ b/tools/dr_cutover/Cargo.toml
@@ -7,6 +7,6 @@ authors = ["CEPtra Authors <eng@nanocloud.local>"]
 
 [dependencies]
 anyhow = "1.0.95"
-ceptra = { path = "../.." }
+ceptra = { path = "../..", default-features = false }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
