--- a/tools/lane_compiler/Cargo.toml
+++ b/tools/lane_compiler/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 anyhow = "1.0.95"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
-ceptra = { path = "../.." }
+ceptra = { path = "../..", default-features = false }
