--- a/tools/sdk_conformance/Cargo.toml
+++ b/tools/sdk_conformance/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 anyhow = "1.0.95"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
-ceptra = { path = "../.." }
+ceptra = { path = "../..", default-features = false }
