--- a/tools/wire_lint/Cargo.toml
+++ b/tools/wire_lint/Cargo.toml
@@ -7,4 +7,4 @@ description = "Ensures CEPtra wire catalog matches Clustor artifacts"
 
 [dependencies]
 anyhow = "1.0.95"
-ceptra = { path = "../../" }
+ceptra = { path = "../../", default-features = false }
